--- a/How to Survive.html
+++ b/How to Survive.html
@@ -34,9 +34,14 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/B36Ehzf2cxE" frameborder="0" allowfullscreen class="wallpaper" align="right"> </iframe> 
         
   
-            (paraphrase) As your first day begins, you will need to collect wood. Use this to make a crafting table (place the crafting table to use it) your first tool should probably be an axe, which makes collecting wood a lot faster. Then make a wooden pickaxe to dig a small stairway into the ground to collect at least 29 cobblestone for a full set of stone tools, and a furnace (8 cobblestone). You then want to make a shelter (dirt or wooden shack), or if available, stay in a village. After that put down your crafting table and furnace and smelt some wood into charcoal, and make some torches with that.You could use coal for torches.
-
-Alternately, after you gather wood, you can create a crafting table and make a wooden pickaxe. Find stone to mine, and gather a few cobblestones, then make stone tools and sword. Some coal to make torches and you are ready to go caving. You can also avoid dealing with the mobs and setting up a base by building a bed. You will need to shear the sheep for wool, or kill the 3 sheep to collect 3 wool and make a bed out of it. Instead of building a home, you simply put down the bed and go to sleep at sunset before the monsters spawn.
+           Start by punching trees down as you spawn in a new world. Collect more than 5 logs and convert 3 into planks. Then, create a crafting table by opening your inventory and put 4 wooden planks into your crafting box.  Craft a wooden pick out of planks and sticks. Get a lot of cobblestone.  You will need it to mine coal or mine some cobble to turn into a furnace, you then burn the logs in there for charcoal.  Next, create a small house to wait out the night and make sure to lit it with torches.  Then, carefully get out of your house and look out for monsters.  If there are none, find more ores and wood to craft better tools and armor.  Click <a href= "http://www.minecraft-crafting.net/" target="_blank">here </a>to find out more on crafting recipes.
+           <br>
+           <br>
+           <br>
+           <br>
+           <br>
+           <br>
+           <br
        </nav>
  
        
