Mr. M helping fix the github/video problem

--- a/Mobs.html
+++ b/Mobs.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+       <link rel="stylesheet" href="reset.css" type="text.css">
     <link rel="stylesheet" href="Mob.css" type="text.css">
     
     <title>Hello</title>
