--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <nav> 
    
         <p> By: Matthew Lee  July 5<sup>th</sup></p>
-        <hr> 
+      <hr>
 
   <h2><b><i> Table of Contents</i></b></h2>
-<h3> What is<a href=https://minecraft.net/ target="_blank"> Minecraft</a>?</h3>
+<h3> What is<a href="https://minecraft.net/" target="_blank"> Minecraft</a>?</h3>
        <ui text-align="right">
 <div>
   <h3>
@@ -30,7 +30,7 @@
         <li><a href="Videos.html">Minecraft Videos</a></li>
    </h3>
    
-   <br>
+
        </nav>
        
  <div>
@@ -50,6 +50,6 @@ Finally, the is Hardcore Mode.  Harcore mode is very similar to Survival Mode, B
 
       <br>
   
-    </div>
+    
   </body>
 </html>
