--- a/How-to-Survive.html
+++ b/How-to-Survive.html
@@ -27,7 +27,8 @@
     
        <li><a href= "How-to-Survive.html" class="active"> How to Survive|</a> </li>
         <li> <a href="index1.html">Where to go next |</a> </li>
-        <li><a href="Videos.html">Minecraft Videos</a></li>
+       <li><a href="Videos.html">Minecraft Videos |</a></li>
+        <li><a href="hostile-mobs.html"> Mobs You Should Avoid</a></li>
         </hr>
         </h3>
     <p >
