--- a/Videos.html
+++ b/Videos.html
@@ -29,7 +29,8 @@
     
        <li><a href= "How-to-Survive.html"> How to Survive |</a> </li>
         <li><a href="index1.html">Where to go next |</a></li>
-        <li><a href="Videos.html" class="active">Minecraft Videos</a></li>
+       <li><a href="Videos.html">Minecraft Videos |</a></li>
+        <li><a href="hostile-mobs"> Mobs You Should Avoid</a></li>
         </ul>
         </nav>
         
