--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
   <h3>
      <li><a href= "#What" class="active">What is Minecraft |</a>  </li>
       
-       <li><a href= "How to Survive.html"> How to Survive |</a> </li>
+       <li><a href= "How-to-Survive.html"> How to Survive |</a> </li>
         <li> <a href="index1.html" >Where to go next |</a> </li>
-        <li><a href="Videos.html">Minecraft Videos</a></li>
+       <li><a href="Videos.html">Minecraft Videos |</a></li>
+        <li><a href="hostile-mobs.html"> Mobs You Should Avoid</a></li>
    </h3>
    
 
