--- a/html/videos.html
+++ b/html/videos.html
@@ -1,7 +1,7 @@
 <html>
   <head>
  
-    <link rel="stylesheet" href="Videos.css" type="text.css">
+    <link rel="stylesheet" href="../css/videos.css" type="text.css">
     
    <title>Minecraft Guide</title>
   </head>
@@ -11,8 +11,8 @@
             <ul class="clearfix">
                 <li><a href="index.html">Home</a></li>
                 
-                <li><a href="How-to-Survive.html">How to Survive</a></li>
-                 <li   class="current-item"><a href="Videos.html">Bosses</a></li>
+                <li><a href="how-to-survive.html">How to Survive</a></li>
+                 <li   class="current-item"><a href="videos.html">Bosses</a></li>
                 <li><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
                 <li><a href="index1.html">Where to Go Next</a></li>
                 <li>
