--- a/html/videos.html
+++ b/html/videos.html
@@ -14,7 +14,7 @@
                 <li><a href="how-to-survive.html">How to Survive</a></li>
                  <li   class="current-item"><a href="videos.html">Bosses</a></li>
                 <li><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
-                <li><a href="index1.html">Where to Go Next</a></li>
+                <li><a href="where-to-go.html">Where to Go Next</a></li>
                 <li>
                     <a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
      
