--- a/html/hostile-mobs.html
+++ b/html/hostile-mobs.html
@@ -9,7 +9,7 @@
      <div class="menu-wrap">
         <nav class="menu">
             <ul class="clearfix">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="..\index.html">Home</a></li>
                 
                 <li><a href="how-to-survive.html">How to Survive</a></li>
                  <li><a href="videos.html">Bosses</a></li>
@@ -45,7 +45,7 @@
         <img src=http://33.media.tumblr.com/9a45252e88b5899ba8241721e06d946d/tumblr_mzs8ouFi6A1t38q5mo1_500.gif width="200" >
       </nav>
       <article>
-      <table>
+      <table class="table">
         <tr>
           <th>Creeper</th>
           <th>Enderman</th>
