--- a/html/where-to-go.html
+++ b/html/where-to-go.html
@@ -52,7 +52,7 @@
     </article>
 
 
-    <table>
+    <table class="table">
       <tr>
         <th> Redstone</th>
         <th> Minecraft Creations</th>
