--- a/html/how-to-survive.html
+++ b/html/how-to-survive.html
@@ -46,9 +46,10 @@
   <h2
   ><b><i> Table of Contents</i></b></h2>
 <h3> How To Survive</h3>
+<hr>
 <article>
 
-    <p >
+    <p class="table">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/B36Ehzf2cxE" frameborder="0" allowfullscreen class="wallpaper" align="right"> </iframe> 
         
   
