--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css\index.css" type="text/css">
+    <link rel="stylesheet" href="css\mobile.css" type="text/css" />
     
    <title>Minecraft Guide</title>
   </head>
