--- a/html/how-to-survive.html
+++ b/html/how-to-survive.html
@@ -5,24 +5,22 @@
     <title>Minecraft Guide</title>
   </head>
   <body>
-     <div class="menu-wrap">
-        <nav class="menu">
-          <ul class="clearfix">
-              <li><a href="index.html">Home</a></li>
-              <li class="current-item"><a href="how-to-survive.html">How to Survive</a></li>
-              <li><a href="videos.html">Bosses</a></li>
-              <li><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
-              <li><a href="where-to-go.html">Where to Go Next</a></li>
-                <li>
-                    <a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
-     
-                    <ul class="sub-menu">
-                        <li><a href="http://www.minecraft-crafting.net/" target="_blank">Crafting Recipes</a></li>
-                        <li><a href="http://www.thetoptens.com/minecraft-youtubers/" target="_blank">YouTubers</a></li>
-                        <li><a href="http://minecraft-server-list.com/sort/Popular/" target="_blank">Server IPs</a></li>
-                        <li><a href="https://minecraft.net/" target="_blank">Official Minecraft Website</a></li>
-                    </ul>
-                </li>
+    <div class="menu-wrap">
+      <nav class="menu">
+        <ul class="clearfix">
+         <li><a href="..\index.html">Home</a></li>
+            <li class="current-item"><a href="how-to-survive.html">How to Survive</a></li>
+            <li><a href="videos.html">Bosses</a></li>
+            <li><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
+            <li><a href="where-to-go.html">Where to Go Next</a></li>
+            <li><a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
+              <ul class="sub-menu">
+                <li><a href="http://www.minecraft-crafting.net/" target="_blank">Crafting Recipes</a></li>
+                <li><a href="http://www.thetoptens.com/minecraft-youtubers/" target="_blank">YouTubers</a></li>
+                <li><a href="http://minecraft-server-list.com/sort/Popular/" target="_blank">Server IPs</a></li>
+                <li><a href="https://minecraft.net/" target="_blank">Official Minecraft Website</a></li>
+              </ul>
+              </li>
             </ul>
         </nav>
      </div>
