--- a/html/videos.html
+++ b/html/videos.html
@@ -9,7 +9,7 @@
      <div class="menu-wrap">
         <nav class="menu">
             <ul class="clearfix">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="..\index.html">Home</a></li>
                 
                 <li><a href="how-to-survive.html">How to Survive</a></li>
                  <li   class="current-item"><a href="videos.html">Bosses</a></li>
