--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">    
     <link rel="stylesheet" href="css\index.css" type="text/css">
     <link rel="stylesheet" href="css\mobile.css" type="text/css" />
     
