--- a/html/hostile-mobs.html
+++ b/html/hostile-mobs.html
@@ -6,29 +6,26 @@
    <title>Minecraft Guide</title>
   </head>
   <body>
-     <div class="menu-wrap">
-        <nav class="menu">
-            <ul class="clearfix">
-                <li><a href="..\index.html">Home</a></li>
-                
-                <li><a href="how-to-survive.html">How to Survive</a></li>
-                 <li><a href="videos.html">Bosses</a></li>
-                <li class="current-item"><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
-                <li><a href="where-to-go.html">Where to Go Next</a></li>
-                <li>
-                    <a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
-     
-                    <ul class="sub-menu">
-                        <li><a href="http://www.minecraft-crafting.net/" target="_blank">Crafting Recipes</a></li>
-                        <li><a href="http://www.thetoptens.com/minecraft-youtubers/" target="_blank">YouTubers</a></li>
-                        <li><a href="http://minecraft-server-list.com/sort/Popular/" target="_blank">Server IPs</a></li>
-                        <li><a href="https://minecraft.net/" target="_blank">Official Minecraft Website</a></li>
-                    </ul>
-                </li>
+    <div class="menu-wrap">
+      <nav class="menu">
+        <ul class="clearfix">
+          <li><a href="..\index.html">Home</a></li>
+          <li><a href="how-to-survive.html">How to Survive</a></li>
+          <li><a href="videos.html">Bosses</a></li>
+          <li class="current-item"><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
+          <li><a href="where-to-go.html">Where to Go Next</a></li>
+          <li><a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
+            <ul class="sub-menu">
+              <li><a href="http://www.minecraft-crafting.net/" target="_blank">Crafting Recipes</a></li>
+              <li><a href="http://www.thetoptens.com/minecraft-youtubers/" target="_blank">YouTubers</a></li>
+              <li><a href="http://minecraft-server-list.com/sort/Popular/" target="_blank">Server IPs</a></li>
+              <li><a href="https://minecraft.net/" target="_blank">Official Minecraft Website</a></li>
             </ul>
-        </nav>
-     </div>
-     <br>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <br>
     <section class="container">
       <div class="heading-background"> 
         <h1 class="head_title"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" align= top class="picture_title">
@@ -41,33 +38,40 @@
       <h2><b><i> Table of Contents</i></b></h2>
       <nav> 
         <h3> Mobs You Should Avoid</h3>
-        <img src=http://33.media.tumblr.com/9a45252e88b5899ba8241721e06d946d/tumblr_mzs8ouFi6A1t38q5mo1_500.gif width="200" >
       </nav>
       <article>
         <table class="table">
           <tr>
-            <th>Creeper</th>
-            <th>Enderman</th>
-            <th>Zombie</th>
-            <th> Spider</th>
-            <th> Skeleton</th>
+            <img src=http://33.media.tumblr.com/9a45252e88b5899ba8241721e06d946d/tumblr_mzs8ouFi6A1t38q5mo1_500.gif width="300" class="pic-mob">
           </tr>
           <tr>
+          	<td>Creepers</td>
             <td width="130px">Creepers are agressive creatures that will try to blow you into bits.  You have to make sure to stay as far as possible from this walking tnt.</td>
-             <td width="150px"> Endermen are black, neutral mobs from the End that have the ability to teleport. Their abilities are the ability to pick up blocks and place them elsewhere and to teleport. When teleporting, an Enderman will leave a faint trail of purple particles leading to where it teleported to.</td>
-             <td width="130px">Zombies are common hostile mobs that burn in sunlight.</td>
-            <td width="130px"> Spiders are common neutral mobs that have a unique ability to climb walls.  At night, they are hostile, but at day they are neutral if you do not attack them.</td>
-            <td width="130px">Skeletons are undead, ranged hostile mobs equipped with bows that burn in sunlight.</td>
-         </tr>
-          <tr>
             <td> <img src=http://home.uktechreviews.com/Geek%20news%20Blog/files/mine-craft-creeper.png width="125px"> </img></td>
+          </tr>
+          <tr>
+            <td>Endermen</td>
+            <td width="150px"> Endermen are black, neutral mobs from the End that have the ability to teleport. Their abilities are the ability to pick up blocks and place them elsewhere and to teleport. When teleporting, an Enderman will leave a faint trail of purple particles leading to where it teleported to.</td>
             <td><img src=http://hydra-media.cursecdn.com/minecraft.gamepedia.com/thumb/0/05/Enderman_normal.png/150px-Enderman_normal.png width="175px"> </img> </td>
+          </tr>
+          <tr>
+            <td> Zombies </td>
+            <td width="130px">Zombies are common hostile mobs that burn in sunlight.</td>
             <td ><img src=http://hydra-media.cursecdn.com/minecraft.gamepedia.com/thumb/c/c3/Zombie.png/243px-Zombie.png width="125px"> </img> </td>
-            <td><img src=http://hydra-media.cursecdn.com/minecraft.gamepedia.com/thumb/8/84/Spider.png/225px-Spider.png width="200px"> </img></td>
+          </tr>
+          <tr>
+            <td> Spiders</td>
+            <td width="130px"> Spiders are common neutral mobs that have a unique ability to climb walls.  At night, they are hostile, but at day they are neutral if you do not attack them.</td>
+             <td><img src=http://hydra-media.cursecdn.com/minecraft.gamepedia.com/thumb/8/84/Spider.png/225px-Spider.png width="200px"> </img></td>
+          </tr>
+          <tr>
+            <td>Skeletons</td>
+            <td width="130px">Skeletons are undead, ranged hostile mobs equipped with bows that burn in sunlight.</td>
             <td ><img src=http://hydra-media.cursecdn.com/minecraft.gamepedia.com/thumb/2/23/Skeleton.png/177px-Skeleton.png width="125px"> </img> </td>
           </tr> 
         </table>
         <br>
+        <p><a href="hostile-mobs.html" class="back">Back to Top</a></p>
       </article>
     </section>
   </body>
