--- a/how-to-survive.html
+++ b/how-to-survive.html
@@ -1,14 +1,14 @@
 <html>
-  <head>
-    <link rel="stylesheet" href="../css/how-to-survive.css" type="text.css">
+  <header>
+    <link rel="stylesheet" href="css/how-to-survive.css" type="text.css">
     
     <title>Minecraft Guide</title>
-  </head>
+  </header>
   <body>
     <div class="menu-wrap">
       <nav class="menu">
         <ul class="clearfix">
-          <li><a href="..\index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li class="current-item"><a href="how-to-survive.html">How to Survive</a></li>
           <li><a href="videos.html">Bosses</a></li>
           <li><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
@@ -27,15 +27,17 @@
     <br>
     <section class="container">
       <div class="heading-background"> 
-        <h1 class="head_title"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" align= top class="picture_title"></h1>
+        <h1 class="head_title"><a href="easter-egg.html"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" align= top class="picture_title"></a></h1>
     </section>
     <section>
       <article>
         <p> By: Matthew Lee  July 5<sup>th</sup></p>
-        <img src="http://orig06.deviantart.net/6e13/f/2012/159/2/2/diamond_sword_by_barakaldo-d52qhwp.gif" width="100px" align="right"></img>
+        <aside>
+          <img src="http://orig06.deviantart.net/6e13/f/2012/159/2/2/diamond_sword_by_barakaldo-d52qhwp.gif" width="100px" align="right"></img>
+        </aside>
         <hr> 
       </article>
-        <b><i> Table of Contents</i></b></h2>
+        <b><i><h2>Table of Contents</i></b></h2>
         <h3> How To Survive</h3>
         <hr>
       <article>
