--- a/videos.html
+++ b/videos.html
@@ -1,13 +1,13 @@
 <html>
-  <head>
-    <link rel="stylesheet" href="../css/videos.css" type="text.css">
+  <header>
+    <link rel="stylesheet" href="css/videos.css" type="text.css">
     <title>Minecraft Guide</title>
-  </head>
+  </header>
   <body>
     <div class="menu-wrap">
       <nav class="menu">
         <ul class="clearfix">
-          <li><a href="..\index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="how-to-survive.html">How to Survive</a></li>
           <li class="current-item"><a href="videos.html">Bosses</a></li>
           <li><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
@@ -26,10 +26,12 @@
     <br>
     <section class="container">
       <div class="heading-background"> 
-        <h1 class="head_title"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" align= top class="picture_title"></h1>
+        <h1 class="head_title"><a href="easter-egg.html"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" align= top class="picture_title"></a></h1>
       </div>
       <p> By: Matthew Lee  July 5<sup>th</sup> H <sub>2</sub>0</p>
-      <img src="http://orig06.deviantart.net/6e13/f/2012/159/2/2/diamond_sword_by_barakaldo-d52qhwp.gif" width="100px" align="right"></img>
+      <aside>
+        <img src="http://orig06.deviantart.net/6e13/f/2012/159/2/2/diamond_sword_by_barakaldo-d52qhwp.gif" width="100px" align="right"></img>
+      </aside>
       <hr> 
       <h2><b><i> Table of Contents</i></b></h2>
       <h3> Minecraft Bosses</h3>
