--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+<!DOCTYPE html>
 <html>
-  <header>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">    
+  <head>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css\index.css" type="text/css">
-    <link rel="stylesheet" href="css\mobile.css" type="text/css" />
-    <link rel="icon" href="http://vignette2.wikia.nocookie.net/minecraft/images/d/df/Minecraft_grass_block.png/revision/latest?cb=20120501004541" type="image/png" sizes="16x16">
+    <link rel="stylesheet" href="css\mobile.css" type="text/css" >
+    <link rel="icon" href="icon.ico"/>
     <title>Minecraft Guide</title>
-  </header>
+  </head>
   <body>
     <div class="menu-wrap">
       <nav class="menu">
@@ -29,10 +30,8 @@
     <br>
     <section class="container">
       <div class="heading-background"> 
-        <h1 class="head_title"><a href="easter-egg.html"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" align= top class="picture_title"></a></h1>
+        <h1 class="head_title"><a href="easter-egg.html"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" class="picture_title"></a></h1>
       </div>
-    </section>
-    <section class="container">
       <p> By: Matthew Lee  July 5<sup>th</sup> H <sub>2</sub>0</p>
       <aside>
         <img src="http://orig06.deviantart.net/6e13/f/2012/159/2/2/diamond_sword_by_barakaldo-d52qhwp.gif" width="100px" align="right"></img>
