--- a/where-to-go.html
+++ b/where-to-go.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
-  <header>
+  <head>
     <link rel="stylesheet" href="css/where-to-go.css" type="text.css">
+    <link rel="icon" href="icon.ico">
     <title>Minecraft Guide</title>
-  </header>
+  </head>
   <body>
     <div class="menu-wrap">
       <nav class="menu">
