--- a/hostile-mobs.html
+++ b/hostile-mobs.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <header>
+  <head>
       
     <link rel="stylesheet" href="css/hostile-mobs.css" type="text.css">
-    
+    <link rel="icon" href="icon.ico">
    <title>Minecraft Guide</title>
-  </header>
+  </head>
   <body>
     <div class="menu-wrap">
       <nav class="menu">
@@ -74,7 +75,7 @@
         </table>
         <br>
         <footer>
-          <p><a href="hostile-mobs.html" class="back">Back to Top</a></p>
+          <p><a "hostile-mobs.html" class="back">Back to Top</a></p>
         </footer>
       </article>
     </section>
