--- a/how-to-survive.html
+++ b/how-to-survive.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <header>
-    <link rel="stylesheet" href="css/how-to-survive.css" type="text.css">
-    
+  <head>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="css\how-to-survive.css" type="text.css">
+    <link rel="icon" href="icon.ico">
     <title>Minecraft Guide</title>
-  </header>
+  </head>
   <body>
     <div class="menu-wrap">
       <nav class="menu">
@@ -25,9 +27,10 @@
       </nav>
     </div>
     <br>
-    <section class="container">
+   <section class="container">
       <div class="heading-background"> 
-        <h1 class="head_title"><a href="easter-egg.html"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" align= top class="picture_title"></a></h1>
+        <h1 class="head_title"><a href="easter-egg.html"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" class="picture_title"></a></h1>
+      </div>
     </section>
     <section>
       <article>
