--- a/videos.html
+++ b/videos.html
@@ -1,8 +1,11 @@
+<!DOCTYPE html>
 <html>
-  <header>
+  <head>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/videos.css" type="text.css">
+    <link rel="icon" href="icon.ico">
     <title>Minecraft Guide</title>
-  </header>
+  </head>
   <body>
     <div class="menu-wrap">
       <nav class="menu">
@@ -25,14 +28,18 @@
     </div>
     <br>
     <section class="container">
-      <div class="heading-background"> 
-        <h1 class="head_title"><a href="easter-egg.html"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" align= top class="picture_title"></a></h1>
+     <div class="heading-background"> 
+        <h1 class="head_title"><a href="easter-egg.html"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" class="picture_title"></a></h1>
       </div>
+      </section>
+      <section>
+        <article>
       <p> By: Matthew Lee  July 5<sup>th</sup> H <sub>2</sub>0</p>
       <aside>
         <img src="http://orig06.deviantart.net/6e13/f/2012/159/2/2/diamond_sword_by_barakaldo-d52qhwp.gif" width="100px" align="right"></img>
       </aside>
       <hr> 
+      </article>
       <h2><b><i> Table of Contents</i></b></h2>
       <h3> Minecraft Bosses</h3>
       <hr>
