--- a/easter-egg.html
+++ b/easter-egg.html
@@ -1,20 +1,24 @@
+<!DOCTYPE html>
 <html>
   <header>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">    
     <link rel="stylesheet" href="css\index.css" type="text/css">
     <link rel="stylesheet" href="css\mobile.css" type="text/css" />
+    <link rel="stylesheet" href="css\styles.css" type="text.css">
     <title>Minecraft Guide</title>
   </header>
   <body>
     <div class="menu-wrap">
       <nav class="menu">
         <ul class="clearfix">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="how-to-survive.html">How to Survive</a></li>
-          <li><a href="videos.html">Bosses</a></li>
-          <li><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
-          <li><a href="where-to-go.html">Where to Go Next</a></li>
-          <li><a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
+          <li id="home"><a href="index.html">Home</a></li>
+          <li id="survive"><a href="how-to-survive.html">How to Survive</a></li>
+          <li id="videos"><a href="videos.html">Bosses</a></li>
+          <li id="mobs"><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
+          <li id="food"><a href="food.html">How to get Food</a></li>
+          <li id="where"><a href="where-to-go.html">Where to Go Next</a></li>
+          <li id="slideshow"><a href="slide-show.html">Users' Creations</a></li>
+          <li id="help"><a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
             <ul class="sub-menu">
               <li><a href="http://www.minecraft-crafting.net/" target="_blank">Crafting Recipes</a></li>
               <li><a href="http://www.thetoptens.com/minecraft-youtubers/" target="_blank">YouTubers</a></li>
