--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css\index.css" type="text/css">
     <link rel="stylesheet" href="css\mobile.css" type="text/css" >
+    <link rel="stylesheet" href="css\styles.css" type="text.css">
     <link rel="icon" href="icon.ico"/>
     <title>Minecraft Guide</title>
   </head>
@@ -11,12 +12,14 @@
     <div class="menu-wrap">
       <nav class="menu">
         <ul class="clearfix">
-          <li  class="current-item"><a href="index.html">Home</a></li>
-          <li><a href="how-to-survive.html">How to Survive</a></li>
-          <li><a href="videos.html">Bosses</a></li>
-          <li><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
-          <li><a href="where-to-go.html">Where to Go Next</a></li>
-          <li><a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
+          <li  class="current-item" id="home"><a href="index.html">Home</a></li>
+          <li id="survive"><a href="how-to-survive.html">How to Survive</a></li>
+          <li id="videos"><a href="videos.html">Bosses</a></li>
+          <li id="mobs"><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
+          <li id="food"><a href="food.html">How to get Food</a></li>
+          <li id="where"><a href="where-to-go.html">Where to Go Next</a></li>
+          <li id="slideshow"><a href="slide-show.html">Users' Creations</a></li>
+          <li id="help"><a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
             <ul class="sub-menu">
               <li><a href="http://www.minecraft-crafting.net/" target="_blank">Crafting Recipes</a></li>
               <li><a href="http://www.thetoptens.com/minecraft-youtubers/" target="_blank">YouTubers</a></li>
@@ -32,7 +35,7 @@
       <div class="heading-background"> 
         <h1 class="head_title"><a href="easter-egg.html"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" class="picture_title"></a></h1>
       </div>
-      <p> By: Matthew Lee  July 5<sup>th</sup> H <sub>2</sub>0</p>
+      <p> By: Matthew Lee</p>
       <aside>
         <img src="http://orig06.deviantart.net/6e13/f/2012/159/2/2/diamond_sword_by_barakaldo-d52qhwp.gif" width="100px" align="right"></img>
       </aside>
