--- a/videos.html
+++ b/videos.html
@@ -4,18 +4,21 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="css/videos.css" type="text.css">
     <link rel="icon" href="icon.ico">
+    <link rel="stylesheet" href="css\styles.css" type="text.css">
     <title>Minecraft Guide</title>
   </head>
   <body>
     <div class="menu-wrap">
       <nav class="menu">
         <ul class="clearfix">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="how-to-survive.html">How to Survive</a></li>
-          <li class="current-item"><a href="videos.html">Bosses</a></li>
-          <li><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
-          <li><a href="where-to-go.html">Where to Go Next</a></li>
-          <li><a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
+          <li id="home"><a href="index.html">Home</a></li>
+          <li id="survive"><a href="how-to-survive.html">How to Survive</a></li>
+          <li id="videos" class="current-item"><a href="videos.html">Bosses</a></li>
+          <li id="mobs"><a href="hostile-mobs.html">Mobs You Should Avoid</a></li>
+          <li id="food"><a href="food.html">How to get Food</a></li>
+          <li id="where"><a href="where-to-go.html">Where to Go Next</a></li>
+          <li id="slideshow"><a href="slide-show.html">Users' Creations</a></li>
+          <li id="help"><a href="#">Helpful Sites <span class="arrow">&#9660;</span></a>
             <ul class="sub-menu">
               <li><a href="http://www.minecraft-crafting.net/" target="_blank">Crafting Recipes</a></li>
               <li><a href="http://www.thetoptens.com/minecraft-youtubers/" target="_blank">YouTubers</a></li>
@@ -55,7 +58,7 @@
           </tr>
           <tr>
             <td> <img src=http://vignette3.wikia.nocookie.net/minecraft/images/5/5a/Ender_Dragon.png/revision/latest?cb=20111119071911 width="270px"> </img> </td>
-            <td> <img src=http://pixelpapercraft.com/files/1348193791675.png width="270px"> </img></td>
+            <td> <img src="http://pixelpapercraft.com/files/1348193791675.png" width="270px"> </img></td>
           </tr>
         </table>
       </center>
