--- a/videos.html
+++ b/videos.html
@@ -37,7 +37,7 @@
       </section>
       <section>
         <article>
-      <p> By: Matthew Lee  July 5<sup>th</sup> H <sub>2</sub>0</p>
+      <p> By: Matthew Lee</p>
       <aside>
         <img src="http://orig06.deviantart.net/6e13/f/2012/159/2/2/diamond_sword_by_barakaldo-d52qhwp.gif" width="100px" align="right"></img>
       </aside>
