--- a/hostile-mobs.html
+++ b/hostile-mobs.html
@@ -35,8 +35,7 @@
       
         <h1 class="head_title"><a href="easter-egg.html"><img src="http://4.bp.blogspot.com/-baka49zNdws/UswLniSTJxI/AAAAAAAAALM/x7S9Lh5NFs0/s1600/Minecraft-logo.png" align= top class="picture_title"></a>
         </h1>
-    </section>
-    <section class="container">
+      </div>
       <p> By: Matthew Lee</p>
       <aside>
         <img src="http://orig06.deviantart.net/6e13/f/2012/159/2/2/diamond_sword_by_barakaldo-d52qhwp.gif" width="100px" align="right"></img>
