--- a/videos.html
+++ b/videos.html
@@ -56,7 +56,7 @@
           </tr>
           <tr>
             <td> <img src=http://vignette3.wikia.nocookie.net/minecraft/images/5/5a/Ender_Dragon.png/revision/latest?cb=20111119071911 width="270px"> </img> </td>
-            <td> <img src="http://pixelpapercraft.com/files/1348193791675.png" width="270px"> </img></td>
+            <td> <img src="http://vignette2.wikia.nocookie.net/minecraft/images/a/aa/Wither.png/revision/latest?cb=20130120051607" width="270px"> </img></td>
           </tr>
         </table>
       </center>
