--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
               <li><a href="http://www.minecraft-crafting.net/" target="_blank">Crafting Recipes</a></li>
               <li><a href="http://www.thetoptens.com/minecraft-youtubers/" target="_blank">YouTubers</a></li>
               <li><a href="http://minecraft-server-list.com/sort/Popular/" target="_blank">Server IPs</a></li>
-              <li><a href="https://minecraft.net/" target="_blank">Official Minecraft Website</a></li>
+              <li><a href="https://minecraft.net/" target="_blank">Official Minecraft Website</a>
+              </li>
             </ul>
           </li>
         </ul>
