--- a/food.html
+++ b/food.html
@@ -68,13 +68,13 @@
           <tr>
             <td><h3>Chicken</h3></td>
             <td width="130px"><img src="http://vignette3.wikia.nocookie.net/minecraft360/images/a/a4/Chickens.png/revision/latest?cb=20120525060347"></td>
-             <td> Sheeps can be killed by being rapidly punched with or without a weapon.  After they die, they will drop up to three raw mutton</td>
+             <td> Chickens can be killed by being rapidly punched with or without a weapon.  After they die, they will drop up to three raw chicken</td>
              <td><img src="http://vignette2.wikia.nocookie.net/minecraft/images/6/6e/Rawchicken.png/revision/latest?cb=20121011233337"></td>
           </tr>
           <tr>
             <td><h3>Rabbit</h3></td>
             <td width="130px"><img src="http://hydra-media.cursecdn.com/minecraft.gamepedia.com/thumb/f/fd/Rabbit.png/225px-Rabbit.png" width="130px"></td>
-            <td> Sheeps can be killed by being rapidly punched with or without a weapon.  After they die, they will drop up to three raw mutton</td>
+            <td> Rabbits can be killed by being rapidly punched with or without a weapon.  After they die, they will drop up to three raw rabbit</td>
             <td width="130px"><img src="http://hydra-media.cursecdn.com/minecraft.gamepedia.com/e/e6/Raw_Rabbit.png?version=09cb95dffd731868760966e3d77e6114"></td>
           </tr> 
         </table>
